--- a/api/package.json
+++ b/api/package.json
@@ -1,12 +1,1 @@
-{   "name": "mern-auth",
-    "main": "server.js",
-    "scripts":{
-        "dev":"nodemon server.js",
-        "start": "node api/server.js"
-    },
-    "type":"module",
-    "dependencies":{
-        "express":"^4.18.2",
-        "nodemon":"^3.0.1"
-    }
-}
+{"name":"mern-auth","main":"server.js","scripts":{"dev":"nodemon server.js","start":"node api/server.js"},"type":"module","dependencies":{"dotenv":"^16.3.1","express":"^4.18.2","mongoose":"^7.5.3","nodemon":"^3.0.1"}}
