--- a/api/package.json
+++ b/api/package.json
@@ -1,1 +1,25 @@
-{"name":"mern-auth","main":"server.js","scripts":{"dev":"nodemon server.js","start":"node api/server.js", "build" : "npm install && npm install --prefix cd ../client && npm run build --prefix cd ../client"},"type":"module","dependencies":{"bcryptjs":"^2.4.3","cookie-parser":"^1.4.6","dotenv":"^16.3.1","express":"^4.18.2","jsonwebtoken":"^9.0.2","mongoose":"^7.5.3","nodemon":"^3.0.1"}}
+{
+  "name": "mern-auth",
+  "main": "server.js",
+  "scripts": {
+    "dev": "nodemon server.js",
+    "start": "node api/server.js",
+    "build": "npm install && npm install --prefix cd ../client && npm run build --prefix cd ../client"
+  },
+  "type": "module",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.3",
+    "nodemon": "^3.0.1"
+  },
+  "version": "1.0.0",
+  "devDependencies": {},
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
+}
