--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {   
     "buildCommand" : "cd client && npm install && npm run build",
     "outputDirectory" : "client/dist",
-    "frameword" : "vite",
+    "framework" : "vite",
     "rewrites" : [
         {
             "source" : "/api/(.*)",
