--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "nodemon server.js",
     "start": "node api/server.js",
-    "build": "npm install && npm install --prefix cd ../client && npm run build --prefix cd ../client"
+    "build": "npm install && npm run build"
   },
   "type": "module",
   "dependencies": {
